--- a/style.css
+++ b/style.css
@@ -17,9 +17,8 @@ html {
 
 header {
   display: flex;
-  /* justify-content: space-between;
-  align-items: center; */
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   margin-bottom: 40px;
 }
 
